--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -969,9 +969,9 @@ img {
 }
 
 .footer__copy {
-  font-size: var(--smaller-font-size);
   text-align: center;
-  color: var(--text-color-light);
+  color: white;
+  font: bold;
   margin-top: var(--mb-3);
 }
 
